--- a/css/pjw.css
+++ b/css/pjw.css
@@ -145,6 +145,10 @@ body {
   overflow: hidden !important;
 }
 
+.pjw-classlist {
+  text-align: left;
+}
+
 .pjw-classlist-heading {
   margin: 12px 5%;
   width: 90%;
@@ -184,6 +188,7 @@ body {
   padding: 5px 25px;
   border-radius: 0 30px 30px 0;
   margin: 0;
+  border-left: 2px solid white;
 }
 
 .pjw-class-filter-switch-button.on {
