--- a/css/pjw.css
+++ b/css/pjw.css
@@ -1,29 +1,3 @@
-#potatojw_mask {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000000;
-  opacity: 0.5;
-  z-index: 9000;
-}
-#potatojw_filter_setting_frame {
-  display: none;
-  position: fixed;
-  left: 15%;
-  top: 15%;
-  bottom: 5px;
-  width: 70%;
-  height: auto;
-  z-index: 9001;
-  background-color: #63065f;
-  border-radius: 8px;
-  padding: 15px;
-  color: white;
-  overflow: auto;
-}
 #pjw-toolbar {
   font-size: 13px;
   position: fixed;
@@ -46,17 +20,6 @@
   font-size: 12px;
   color: #c1c1c1;
   clear: both;
-}
-.filter_section {
-  display: none;
-}
-#filter-control-bar {
-  user-select: none;
-}
-#filter-control-bar > section {
-  float: left;
-  margin-right: 25px;
-  margin-bottom: 5px;
 }
 
 .pjw-mini-button {
@@ -112,6 +75,7 @@
   font-family: 'Material Icons Round';
   font-style: normal;
   font-weight: 400;
+  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Material Icons Round.woff2") format('woff2');
   src: url(https://fonts.gstatic.com/s/materialiconsround/v24/LDItaoyNOAY6Uewc665JcIzCKsKc_M9flwmPq_HTTw.woff2) format('woff2');
 }
 
