--- a/css/pjw.css
+++ b/css/pjw.css
@@ -308,6 +308,10 @@ body {
   margin: 0;
 }
 
+.pjw-classlist-heading-button > .mdc-button__ripple {
+  border-radius: 30px 0 0 30px;
+}
+
 .pjw-classlist-heading-switch-button {
   border-radius: 0 30px 30px 0;
   display: flex;
@@ -664,6 +668,10 @@ body {
   font-family: 'PingFang SC', 'Microsoft YaHei', sans-serif !important;
   height: 50px;
   margin: 8px 5px;
+}
+
+.pjw-class-operation > button > .mdc-button__ripple {
+  border-radius: 25px;
 }
 
 .pjw-class-select-button__container {
